Add feedback endpoint
